--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
 
-    <title>Oskar Duveborn</title>
+    <title>Oskar Duveborn - Tech, Design & Events in Stockholm</title>
     <meta name="description" content="Oskar Duveborn is a creative prototyper and developer with multiple non-profit organization board seats who likes to execute impeccably entertaining technology events." />
       
       <!-- Twitter Card data -->
